✨feat : Retain-loginState, loginned to apply
- 로그인해야 지원하기 가능하게 수정
- 새로고침해도 로그인 상태 유지

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           destination-github-username: 'Neogul02'
           destination-repository-name: 'Likelion13-FE'
           user-email: ${{ secrets.EMAIL }}
-          commit-message: ${{ github.event.commits[0].message }}
+          commit-message: ${{ github.event.head_commit.message || 'Update from GitHub Actions' }}
           target-branch: main
 
       - name: Test get variable exported by push-to-another-repository
